...
        
        let alertAction = UIAlertAction(title: "Ok", style: .default) { action in
            
        }
        alertController.addAction(alertAction)
        DispatchQueue.main.async {
            alertController.view.accessibilityIdentifier = "successAlertDialog"
            self.present(alertController, animated: true)
        }
    }
    
    func errorHandler(error: SignupError) {
        let alertController = UIAlertController(title: "Validation Error", message: "Could not proceed. Please check the error: \(error.localizedDescription)", preferredStyle: .alert)
...
        let alertAction = UIAlertAction(title: "Ok", style: .default) { action in
            
        }
        alertController.addAction(alertAction)
        
        DispatchQueue.main.async {
            alertController.view.accessibilityIdentifier = "errorAlertDialog"
            self.present(alertController, animated: true)
        }
    }
    
    
}
...
